fixed navbar overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 
 nav {
     position: fixed;
-    /* top: 0; */
+    overflow: hidden;
 }
 
 h1 {
